# cz

./: .gitignore  CMakeLists.txt  hugo.json  readme.md
.github/workflows/: deploy.yml
compiler/: CMakeLists.txt
ideas/: Attributes.md  Can build functions that has compile errors.md  Dependency management.md  Difference between functions and procedures.md  Functions may return anonymous structs.md  Goal - table driven code generation.md  Helpful memory management.md  Ignorable identifier.md  Implicit struct names.md  Keywords may start with hash.md  Macros changes.md  Native support for transactions and transactions on classes.md  Nullish coalescing operators.md  Overloading and function oop syntax.md  Pattern matching on union structs.md  Pipeline-placeholder operator.md  Regex as a native data type.md  Sequence-oriented programming.md  Strong typedefs.md  Support both open and closed enum structures.md  Unnamed functions to be autocompleted.md  _index.md  bitset.md  buddy functions - local functions.md  built in test framework.md  built in types.md  const vs mut vs let.md  embed keyword.md  extend keyword.md  functions on objects.md  no include files.md  required argument names.md  sections inside a function.md  subtypes.md  testing.md
ideas/ideas/: Attributes.md  Can build functions that has compile errors.md  Dependency management.md  Difference between functions and procedures.md  Functions may return anonymous structs.md  Goal - table driven code generation.md  Helpful memory management.md  Ignorable identifier.md  Macros changes.md  (+37 more)
samples/: gui-layout.cz
(+21 files in other folders)
